Correct inner node for hit-testing of pseudo elements.

We incorrectly walked the layout tree for ::before/::after element
ancestors instead of just looking up the originating element. We still
need to traverse anonymous inclusive ancestors of the ::first-letter
text, though.

Bug: 884131, 644093, 92917
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ie010535caea76f8c2676482aa38ece8dbcf6d3fb
Reviewed-on: https://chromium-review.googlesource.com/1226616
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591628}
Former-commit-id: bbbce17933cfd44f7ef36d54d9a7d3746aa68c3c